test/bad/functions/call06.px

func f(x: Int): Void def
    return

f(x=false)
